--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.33.2",
+    "react-native-elements": "^3.4.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "react-native-url-polyfill": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
