--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.33.2",
+    "@tanstack/react-query": "^4.35.3",
     "react-native-elements": "^3.4.3",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "react-native-url-polyfill": "^2.0.0",
