--- a/package.json
+++ b/package.json
@@ -13,33 +13,35 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.33.2",
-    "@tanstack/react-query": "^4.35.3",
-    "react-native-elements": "^3.4.3",
-    "@react-native-async-storage/async-storage": "^1.19.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-secure-store": "~12.3.1",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.33.2",
+    "@tanstack/react-query": "^4.35.3",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.18",
     "expo": "~49.0.23",
     "expo-crypto": "^15.0.7",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
-    "react-native-pager-view": "6.2.0",
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
